# Globus

./: .gitignore  .project  README.md
AfterPrj/: AfterProjectChanges.docx  ChangesSeitEndepro4.pptx  Globus after project Time log.txt  Verbesserung Globus.msg  toBetested.txt  ~$terProjectChanges.docx
ESP32/: README.md  check_digitals.dwf3work  udp_optimization.dwf3work
ESP32/espressif_project/main/: CMakeLists.txt  PSRAM_FIFO.c  PSRAM_FIFO.h  fpga_ctrl_task.c  fpga_ctrl_task.h  fpga_registers.h  http_task.c  http_task.h  hw_settings.h  idf_component.yml  jpeg2raw.c  jpeg2raw.h  jpeg_decoder.c  main.c  misc_task.c  misc_task.h  pic_buffer.c  pic_buffer.h  psram_fifo.c  psram_fifo.h  psram_fifo_static_pic.c  psram_fifo_static_pic.h  qspi.c  qspi.h  rotor_encoding.c  rotor_encoding.h  rpi_interface.c  rpi_interface.h  status_control_task.c  status_control_task.h  status_control_task_helper.c  status_control_task_helper.h  wifi.c  wifi.h
ESP32/espressif_project/main/tjpgd/: tjpgd.c  tjpgdcnf.h
FPGA/: .gitignore  README.md  default.dwf3work  globus_fpga_archive_Quartus20_1.qarlog  test_board.out.sdc  test_board.pof  test_board.sof  timing.puml
NUCLEO/: .clang-format  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  default.dwf3work  nucleo Debug.launch  nucleo.ioc
PythonGIFmaker/: .gitignore  README.md
PythonServer/: .gitignore  Earth_relief_raw.xcf  app.py  app2.py  converting_notes.xopp  dev_test_turn_pic.py  dev_test_turn_pic2.py  dev_test_turn_pic_math.ipynb  esp_test.py  rotation2.py
RaspiServer/: README.md  dnet.conf  (+1 more)
(+250 files in other folders)
